# ai-eval-harness

./: .gitignore  README.md  cases.jsonl  pyproject.toml
openspec/changes/archive/2026-07-09-adopt-uv-packaging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-adopt-uv-packaging/specs/project-packaging/: spec.md
openspec/changes/archive/2026-07-09-adopt-uv-packaging/specs/repo-hygiene/: spec.md
openspec/changes/archive/2026-07-09-align-project-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-align-project-structure/specs/harness-tests/: spec.md
openspec/changes/archive/2026-07-09-align-project-structure/specs/project-packaging/: spec.md
openspec/changes/archive/2026-07-09-align-project-structure/specs/repo-hygiene/: spec.md
openspec/changes/archive/2026-07-09-prettier-eval-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-prettier-eval-output/specs/report-formatting/: spec.md
openspec/changes/archive/2026-07-09-wrap-failure-log-lines/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-wrap-failure-log-lines/specs/report-formatting/: spec.md
openspec/specs/harness-tests/: spec.md
openspec/specs/project-packaging/: spec.md
openspec/specs/repo-hygiene/: spec.md
openspec/specs/report-formatting/: spec.md
src/eval_harness/: __init__.py  __main__.py  eval.py  providers.py  scorers.py
tests/: test_eval.py  test_providers.py  test_report.py  test_scorers.py
tests/fixtures/: cases.jsonl
