[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-harness"
version = "0.1.0"
description = "A small (~150-line) LLM eval skeleton: load cases, run a model, score, report pass rate / cost / latency."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# The mock path needs nothing but the Python standard library. The extras below
# are opt-in: `litellm` to point --model at a real model, `pretty` for colored
# tables. The test toolchain lives in the `dev` dependency group (below).
dependencies = []

[project.optional-dependencies]
litellm = ["litellm>=1.50", "tenacity"]
pretty = ["rich>=13"]

# Dev toolchain as a PEP 735 dependency group — `uv sync` installs it by default.
# `rich` is intentionally duplicated with the `pretty` extra so the test suite
# exercises the colored report path.
[dependency-groups]
dev = ["pytest", "rich>=13"]

[project.scripts]
eval-harness = "eval_harness.eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_harness"]
